[project]
name = "python-runner"
version = "0.1.0"
description = "Python Runner with commonly used data science packages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.5.1",
    "requests>=2.32.3",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.4.0",
    "jupyter>=1.0.0",
    "pillow>=10.2.0",
    "scipy>=1.12.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "sympy>=1.12.0",
    "networkx>=3.2.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[project.scripts]
python_runner = "main:main"